test/fail/actor-reference-infer.mo
// actor references

let _ = actor "ic:bfozs-kwa73-7nadi";  // cannot infer
